# test-celltype-nn

./: .gitignore  .pre-commit-config.yaml  ASSESSMENT_REPORT.md  CI_CD_SETUP_REPORT.md  CLAUDE.md  CONTRIBUTING.md  DESCRIPTION  LICENSE  NAMESPACE  QUICKSTART.md  README.md  R_README.md  TEST_SUITE_REPORT.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  python-tests.yml  r-tests.yml
R/: data.R  evaluation.R  models.R  preprocessing.R  training.R  utils.R
R_configs/: config.yaml
R_scripts/: predict.R  train_rna_classifier.R
configs/: config.yaml  cpu_config.yaml  gpu_config.yaml  multimodal_config.yaml
notebooks/: celltype_nn_demo.ipynb  example_usage.ipynb
scripts/: check_system.py  predict.py  train.py
src/celltype_nn/data/: dataset.py  loader.py
src/celltype_nn/evaluation/: metrics.py
src/celltype_nn/models/: multimodal_classifier.py  rna_classifier.py
src/celltype_nn/preprocessing/: preprocess.py
src/celltype_nn/training/: lightning_module.py
tests/: __init__.py  conftest.py  test_data.py  test_evaluation.py  test_integration.py  test_models.py  test_preprocessing.py  test_training.py  testthat.R
tests/testthat/: helper-fixtures.R  test-data.R  test-evaluation.R  test-integration.R  test-models.R  test-preprocessing.R  test-training.R
vignettes/: getting_started.Rmd
